<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogActivity">

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/recyclerView"
        app:layout_constraintStart_toStartOf="@+id/recyclerView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/calendarView"
        app:layout_constraintEnd_toEndOf="@+id/textSessionCounter"
        app:layout_constraintStart_toStartOf="@+id/textTotalTimeOnSelectedDay"
        app:layout_constraintTop_toBottomOf="@+id/textTotalTimeOnSelectedDay" />

    <TextView
        android:id="@+id/textTotalTimeOnSelectedDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
        android:textSize="14sp"
        android:text=""
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintStart_toStartOf="@+id/textAllTimeTotal"
        app:layout_constraintTop_toBottomOf="@+id/textAllTimeTotal" />

    <TextView
        android:id="@+id/textAllTimeTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
        android:textSize="14sp"
        android:text=""
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintStart_toStartOf="@+id/imageButtonDelete"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonDelete" />

    <TextView
        android:id="@+id/textSessionCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
        android:textSize="14sp"
        android:text=""
        android:textAlignment="viewEnd"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintEnd_toEndOf="@+id/textAllTimeSessionCounter"
        app:layout_constraintTop_toBottomOf="@+id/textAllTimeSessionCounter"
        android:gravity="end" />

    <TextView
        android:id="@+id/textAllTimeSessionCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
        android:textSize="14sp"
        android:text=""
        android:textAlignment="viewEnd"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintEnd_toEndOf="@+id/imageButtonInsert"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonInsert"
        android:gravity="end" />

    <ImageButton
        android:id="@+id/imageButtonInsert"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="#00000000"
        android:contentDescription="@string/insert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButtonEdit"
        app:srcCompat="@drawable/insert_icon" />

    <ImageButton
        android:id="@+id/imageButtonDelete"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:background="#00000000"
        android:contentDescription="@string/delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/delete_icon" />

    <ImageButton
        android:id="@+id/imageButtonEdit"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="#00000000"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonInsert"
        app:layout_constraintStart_toEndOf="@+id/imageButtonDelete"
        app:layout_constraintTop_toTopOf="@+id/imageButtonDelete"
        app:srcCompat="@drawable/edit_icon"
        android:contentDescription="@string/edit" />

</androidx.constraintlayout.widget.ConstraintLayout>